Closed
Bug 1505023
Opened 7 years ago
Closed 7 years ago
widget/gtk/nsClipboardWayland.h:144:33: error: private field 'mKeyboard' is not used [-Werror,-Wunused-private-field]
Categories
(Core :: Widget: Gtk, defect)
Core
Widget: Gtk
Tracking
()
RESOLVED
FIXED
mozilla65
| Tracking | Status | |
|---|---|---|
| firefox-esr60 | --- | unaffected |
| firefox63 | --- | unaffected |
| firefox64 | --- | unaffected |
| firefox65 | --- | fixed |
People
(Reporter: jbeich, Assigned: glandium)
References
(Blocks 1 open bug)
Details
(Keywords: regression)
Attachments
(1 file)
$ c++ -v
FreeBSD clang version 7.0.0 (tags/RELEASE_700/final 342383) (based on LLVM 7.0.0)
Target: x86_64-unknown-freebsd13.0
Thread model: posix
InstalledDir: /usr/bin
$ ./mach bootstrap
$ echo "ac_add_options --enable-default-toolkit=cairo-gtk3-wayland" >>.mozconfig
$ echo "ac_add_options --enable-warnings-as-errors # mimic MOZ_AUTOMATION" >>.mozconfig
$ ./mach build
In file included from objdir/widget/gtk/Unified_cpp_widget_gtk1.cpp:65:
In file included from widget/gtk/nsClipboard.cpp:14:
widget/gtk/nsClipboardWayland.h:144:33: error: private field 'mKeyboard' is not used [-Werror,-Wunused-private-field]
wl_keyboard *mKeyboard;
^
1 error generated.
This and other bugs will pop up when we switch to wayland builds by default.
Blocks: wayland
| Assignee | ||
Comment 2•7 years ago
|
||
| Assignee | ||
Updated•7 years ago
|
Assignee: nobody → mh+mozilla
Pushed by mh@glandium.org:
https://hg.mozilla.org/integration/autoland/rev/7a060e897a15
Remove unused mKeyboard field after bug 1504689. r=jhorak
Comment 4•7 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla65
Updated•7 years ago
|
status-firefox63:
--- → unaffected
status-firefox64:
--- → unaffected
status-firefox-esr60:
--- → unaffected
You need to log in
before you can comment on or make changes to this bug.
Description
•