Bug 1505023 - Remove unused mKeyboard field after bug 1504689. r=jhorak

Differential Revision: https://phabricator.services.mozilla.com/D11135